# paxos-simple-implementation

./: README.md  TODO.md  paxos-cloud.cabal  stack.yaml
src/: Acceptor (another copy).hs  Acceptor (copy).hs  Acceptor.hs  Consumer.hs  Counter.hs  Master.hs  Messages.hs  Proposer.hs
